# elara

./: .aiexclude  .gitignore  .rstcheck.cfg  AI.md  Dockerfile  README.md  TODOS.MD  TODOS.md  build.sh  convo.rst  elara_raw  email.html  request_test.md  requirements.txt  test.rst  upload.sh
.github/: actions.yml
applet/: MANIFEST.ini  (+1 more)
src/source/_apps/elara/: .gitignore  MANIFEST.ini  README.md  build.sh  convo.rst  experiment.py  main.py  milton.json  model.py  output.rst  parse.py  pyproject.toml  requirements.txt  review.md  review.rst  setup.cfg  summary.rst  test.rst
src/source/_apps/elara/app/: app.py  conf.py  constants.py  decorators.py  exceptions.py  experiment.py  factories.py  factory.py  git.py  loader.py  main.py  model.py  parse.py  printer.py  properties.py  review.md  schemas.py  summary.rst  util.py
src/source/_apps/elara/app/data/: cache.json  config.json  context.json  context.rst  template.json  templates.rst
src/source/_apps/elara/app/data/config/: app.json  args.json
src/source/_apps/elara/app/data/context/: poems.json  quotes.json
src/source/_apps/elara/app/data/history/: axiom.json  elara.json  milton.json
src/source/_apps/elara/app/data/injections/: poems.json
src/source/_apps/elara/app/data/language/: inflection.rst  object.rst  voice.rst  words.rst
src/source/_apps/elara/app/data/memory/: _new.json  axiom.json  elara.json  milton.json
src/source/_apps/elara/app/data/modules/: inflection.rst  object.rst  voice.rst  words.rst
src/source/_apps/elara/app/data/persona/: axiom.rst  elara.rst  persona_axiom.rst  persona_elara.rst
src/source/_apps/elara/app/data/personas/: _new.json  axiom.json  elara.json  gemini.json  milton.json  murrow.json  valis.json
src/source/_apps/elara/app/data/preamble/: axiom.rst  elara.rst
src/source/_apps/elara/app/data/system/: _new.json  axiom.json  axiom.txt  elara.json  elara.txt  milton.json  valis.json
src/source/_apps/elara/app/data/templates/: application.rst  article.rst  conversation.rst  converse.rst  deduce.rst  metadata.rst  output.rst  preamble.rst  request.rst  review.rst  summary.rst  thread.rst
src/source/_apps/elara/app/data/templates/_blocks/: directory.rst  history.rst  identities.rst  internal.rst  language.rst  preamble.rst
src/source/_apps/elara/app/data/threads/: axiom.rst  elara.json  elara.rst  milton.json
src/source/_apps/elara/app/data/tools/: axiom.json  milton.json
src/source/_apps/elara/app/data/tuning/: _new.json  axiom.json  elara.json
src/source/_apps/elara/app/objects/: cache.py  config.py  context.py  conversation.py  directory.py  error.py  errors.py  injection.py  language.py  model.py  persona.py  personas.py  printer.py  repo.py  repository.py  structures.py  template.py  templates.py  terminal.py
src/source/_apps/elara/data/: context.rst
(+2265 files in other folders)
