[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elara"
version = "0.1.0"
description = "A Python package for interacting with Google's Gemini API."
readme = "README.md"
authors = [{name = "Grant"}]
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "google-generativeai>=0.1.0",
    "google-api-core>=2.17.1"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
elara = "elara.main:main"