[metadata]
name = elara
version = 0.1.0
description = A Python package for interacting with Google's Gemini API.
long_description = file: README.md
long_description_content_type = text/markdown
author = Grant
author_email = your.email@example.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    google-generativeai>=0.1.0
    google-api-core>=2.17.1

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    elara = elara.main:main