[metadata]
name = elara
version = 0.1.0
description = Plumb the depths of generative AI.
long_description = file: README.md
long_description_content_type = text/markdown
author = Grant Moore
author_email = chinchalinchin@gmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    =app
python_requires = >=3.8
install_requires =
    google-generativeai==0.8.3
    Jinja2==3.1.5
    requests==2.25.1

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    elara = elara.main:main